// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxFilter tests renders correctly 1`] = `
<div class="sk-panel filter--test id">
  <div class="sk-panel__header">test title</div>
  <div class="sk-panel__content">
    <div data-qa="options" class="sk-item-list">
      <div class="sk-item-list-option sk-item-list__item" data-qa="option" data-key="test label"><input type="checkbox" data-qa="checkbox" readonly="" class="sk-item-list-option__checkbox">
        <div data-qa="label" class="sk-item-list-option__text">test label</div>
        <div data-qa="count" class="sk-item-list-option__count">50</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`option is active 1`] = `
<div class="sk-panel filter--test id">
  <div class="sk-panel__header">test title</div>
  <div class="sk-panel__content">
    <div data-qa="options" class="sk-item-list">
      <div class="sk-item-list-option sk-item-list__item is-active" data-qa="option" data-key="test label"><input type="checkbox" data-qa="checkbox" readonly="" class="sk-item-list-option__checkbox is-active">
        <div data-qa="label" class="sk-item-list-option__text">test label</div>
        <div data-qa="count" class="sk-item-list-option__count">50</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`option is not active 1`] = `
<div class="sk-panel filter--test id">
  <div class="sk-panel__header">test title</div>
  <div class="sk-panel__content">
    <div data-qa="options" class="sk-item-list">
      <div class="sk-item-list-option sk-item-list__item" data-qa="option" data-key="test label"><input type="checkbox" data-qa="checkbox" readonly="" class="sk-item-list-option__checkbox">
        <div data-qa="label" class="sk-item-list-option__text">test label</div>
        <div data-qa="count" class="sk-item-list-option__count">50</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`panel is disabled 1`] = `
<div class="sk-panel filter--test id is-disabled">
  <div class="sk-panel__header is-disabled">test title</div>
  <div class="sk-panel__content is-disabled">
    <div data-qa="options" class="sk-item-list">
      <div class="sk-item-list-option sk-item-list__item" data-qa="option" data-key="test label"><input type="checkbox" data-qa="checkbox" readonly="" class="sk-item-list-option__checkbox">
        <div data-qa="label" class="sk-item-list-option__text">test label</div>
        <div data-qa="count" class="sk-item-list-option__count">50</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`panel is not disabled 1`] = `
<div class="sk-panel filter--test id">
  <div class="sk-panel__header">test title</div>
  <div class="sk-panel__content">
    <div data-qa="options" class="sk-item-list">
      <div class="sk-item-list-option sk-item-list__item" data-qa="option" data-key="test label"><input type="checkbox" data-qa="checkbox" readonly="" class="sk-item-list-option__checkbox">
        <div data-qa="label" class="sk-item-list-option__text">test label</div>
        <div data-qa="count" class="sk-item-list-option__count">50</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`panel is not disabled again 1`] = `
<div class="sk-panel filter--test id">
  <div class="sk-panel__header">test title</div>
  <div class="sk-panel__content">
    <div data-qa="options" class="sk-item-list">
      <div class="sk-item-list-option sk-item-list__item is-active" data-qa="option" data-key="test label"><input type="checkbox" data-qa="checkbox" readonly="" class="sk-item-list-option__checkbox is-active">
        <div data-qa="label" class="sk-item-list-option__text">test label</div>
        <div data-qa="count" class="sk-item-list-option__count">50</div>
      </div>
    </div>
  </div>
</div>
`;
